--- a/php_config/conf/conf.d/extra.ini
+++ b/php_config/conf/conf.d/extra.ini
@@ -2,3 +2,20 @@
 ;extension=redis.so
 ;extension=amqp.so
 ;extension=swoole.so
+zend_extension=xdebug
+# 开启 debug 调试
+xdebug.remote_enable=1
+xdebug.remote_handler=dbgp
+xdebug.remote_autostart = 1
+# xdebug 连接回传调试数据的远程地址和端口（调试器的）
+xdebug.remote_host=docker.for.mac.localhost
+xdebug.remote_port=9001
+# xdebug 是否根据请求地址，返回调试数据（适合php为多个开发环境情况）
+xdebug.remote_connect_back=0
+# 开启性能分析，分析的记录会放到 remote_log 中，需要使用 KCacheGrind 工具打开
+xdebug.profiler_enable=0
+# 通知 PHP 开启调试的标识
+xdebug.idekey=PHPSTORM
+
+# 记录 xdebug与调试器会话 日志
+xdebug.remote_log="/tmp/xdebug.log"
